--- a/spiral_to_cube_demo.ipynb
+++ b/spiral_to_cube_demo.ipynb
@@ -219,7 +219,7 @@
     "\n",
     "This completes the mapping from spiral hex number to q,r,s values.\n",
     "\n",
-    "You can do the inverse mapping by searching the cycle of correct amplitude for values of q,r,s that match your inputs, and then finding the corresponding x. This is demonstrated in the Rust code."
+    "You can do the inverse mapping by searching within the correct cycle for values of q,r,s that match your input q,r,s. This is demonstrated in the Rust code."
    ]
   }
  ],
